--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ string-interner = "0.7.1"
 walkdir = "2.3.1"
 rayon = "1.3.0"
 
+patricia_tree = "0.1.9"
+
 [profile.dev]
 lto = true
 opt-level = 3
