--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ walkdir = "2.3.1"
 rayon = "1.3.0"
 
 patricia_tree = "0.1.9"
+rouille = "3.0.0"
+serde = { version = "1.0.111", features = ["derive"] }
+serde_json = "1.0.53"
 
 [profile.dev]
 lto = true
