--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,14 @@ walkdir = "2.3.1"
 rayon = "1.3.0"
 
 patricia_tree = "0.1.9"
-rouille = "3.0.0"
+rust-bert = "0.7.2"
+
+tiny_http = "0.7.0"
+
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.53"
 
 [profile.dev]
-lto = true
+#lto = true
+#codegen-units = 1
 opt-level = 3
-codegen-units = 1
