--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ rayon = "1.3.0"
 
 patricia_tree = "0.1.9"
 rust-bert = "0.7.2"
-
 tiny_http = "0.7.0"
+levenshtein = "1.0.4"
 
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.53"
